Add search.js script and edit campground view updates

--- a/Views/campgrounds/edit.ejs
+++ b/Views/campgrounds/edit.ejs
@@ -14,12 +14,6 @@
   </div>
 </div>
 
-<style>
-  .card {
-    border: none;
-  }
-</style>
-
 <div id="mainContent" style="display: none">
   <div class="container my-5 d-flex justify-content-center align-items-center">
     <div class="col-md-6 col-xl-6">
@@ -178,7 +172,9 @@
 
             <div class="mb-3">
               <div class="text-center">
-                <button class="btn btn-info w-100">Save Changes</button>
+                <button id="changeBtn" type="submit" class="btn btn-info w-100">
+                  Save Changes
+                </button>
               </div>
             </div>
           </form>
