--- a/Views/campgrounds/index.ejs
+++ b/Views/campgrounds/index.ejs
@@ -84,6 +84,7 @@
 
 <script src="https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js"></script>
 <script src="/Javascripts/clusterMaps.js"></script>
+<script src="/Javascripts/search.js"></script>
 
 <script>
   window.addEventListener("load", () => {
