--- a/Views/Errors/error.ejs
+++ b/Views/Errors/error.ejs
@@ -1,6 +1,6 @@
 <% layout(`Layout/boilerplate`) %>
 
-<div style="margin-top: -100px" class="row">
+<div class="row my-5">
   <div class="col-6 offset-3">
     <div class="alert alert-danger" role="alert">
       <h4 class="alert-heading"><%= err.message %></h4>
