--- a/Views/campgrounds/index.ejs
+++ b/Views/campgrounds/index.ejs
@@ -112,19 +112,4 @@
 
 <script src="https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js"></script>
 <script src="/Javascripts/clusterMaps.js"></script>
-<script src="/Javascripts/search.js"></script>
-
-<script>
-  window.addEventListener("load", () => {
-    const spinner = document.getElementById("spinner");
-    setTimeout(() => {
-      if (spinner) {
-        spinner.remove();
-      }
-    }, 2000);
-    const content = document.getElementById("mainContent");
-    if (content) {
-      content.style.display = "block";
-    }
-  });
-</script>
+<script src="/Javascripts/searchAndLoad.js"></script>
